add a few utility functions

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,12 +21,7 @@ a{
 
 .grid-container{
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 16px; 
-}
-.grid-container{
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   gap: 16px; 
 }
 
